# f15se2-ex

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateVersion.cmake  Makefile  README.md  codecov.yml
.github/workflows/: ci.yml
assets/: README.md
docs/: blackbox_debugging.md  reverse_engineering_asset_formats.md
src/: comm.h  const.h  debug.c  debug.h  dos_compat.h  dosfunc.c  dosfunc.h  eg3dcam.c  eg3dcam.h  eg3dgrid.c  eg3dgrid.h  eg3dload.c  eg3dload.h  eg3dmap.c  eg3dmap.h  eg3dmath.c  eg3dproj.c  eg3dproj.h  eg3drast.c  eg3drast.h  eg3dutil.c  eg3dview.c  eg3dview.h  eg3dvp.c  egcode.h  egcombat.c  egcombat.h  egdata.c  egdata.h  egfarbuf.c  egfileio.c  egfileio.h  egflight.c  egflight.h  egframe.c  egframe.h  eghudm.c  eghudr.c  eginput.c  egkeys.c  (+103 more)
src/asound/: asound_model.c  asound_model.h  asound_music_replacement.c  asound_music_replacement.h  asound_replacements.c  asound_replacements.h  asound_sdl.c
src/compat64/: bios.h  dos.h  egregsh.c  gfx_regshim.c
src/shared/: asset_compare.c  asset_compare.h  asset_compare_3d.c  asset_compare_bytes.c  asset_compare_font.c  asset_compare_image.c  asset_compare_sound.c  asset_path.c  asset_path.h  bitmap_font_replacement.c  bitmap_font_replacement.h  blackbox.c  blackbox.h  blackbox_cli.c  blackbox_cli.h  blackbox_diag.c  blackbox_diag.h  blackbox_gl.c  blackbox_gl.h  blackbox_internal.h  blackbox_io.c  blackbox_io.h  blackbox_snapshot.c  blackbox_snapshot.h  blackbox_state.c  blackbox_state.h  blackbox_wait.c  blackbox_wait.h  cleanup.c  common.h  drawstr.c  file_io.c  filepic.c  gfximpl.c  miscimpl.c  ovlimpl.c  picimpl.c  png_asset.c  png_asset.h  structured_asset_replacement.c  (+5 more)
tests/: asound_asset_full_validation_tests.cpp  asound_cue_full_validation_tests.cpp  asound_music_full_validation_tests.cpp  asound_music_replacement_behavior_tests.cpp  asound_replacements_behavior_tests.cpp  asset_compare_behavior_tests.cpp  asset_path_behavior_tests.cpp  asset_runtime_loader_validation_tests.cpp  award_behavior_tests.cpp  biosfunc_behavior_tests.cpp  bitmap_font_full_validation_tests.cpp  bitmap_font_replacement_behavior_tests.cpp  blackbox_behavior_tests.cpp  blackbox_gl_behavior_tests.cpp  blackbox_inspect_tool_tests.py  blackbox_validation_tests.cpp  cross_layer_function_inventory.py  dosfunc_behavior_tests.cpp  eg3drast_behavior_tests.cpp  eg3drast_internal_behavior_tests.cpp  eg3drast_link_stubs.cpp  eg_main_behavior_aux.cpp  eg_main_behavior_tests.cpp  eg_stubs_behavior_aux.cpp  eg_stubs_behavior_tests.cpp  egsys_internal_behavior_tests.cpp  end_debrief_behavior_tests.cpp  end_file_behavior_tests.cpp  end_input_behavior_tests.cpp  end_runtime_behavior_tests.cpp  farbuf_behavior_tests.cpp  file_io_behavior_tests.cpp  function_coverage_audit.py  game_options_behavior_tests.cpp  gameplay_behavior_tests.cpp  geometry_behavior_tests.cpp  geometry_egmath_link_stubs.cpp  gfx_impl_behavior_tests.cpp  gfx_render_behavior_tests.cpp  golden.h  (+41 more)
tools/: blackbox_inspect.py
tools/f15assets/: CUSTOMIZATION.md  README.md  cli.py  map_editor.html  model_viewer.html
tools/f15assets/f15assets/: __init__.py  fonts.py  io.py  model3d.py  pic.py  sounds.py  terrain.py  validation_compare.py  validation_compare_core.py  validation_compare_font.py  validation_compare_image.py  validation_compare_model3d.py  validation_compare_music.py  validation_compare_sound.py  validation_compare_structured.py  validation_font.py  validation_image.py  validation_model3d.py  validation_sound.py  validation_structured.py  world.py
tools/f15assets/tests/: __init__.py  test_full_assets.py  test_smoke.py
